--- a/chatbot.yml
+++ b/chatbot.yml
@@ -11,6 +11,7 @@ dependencies:
   - aiohttp=3.11.10=py312h5eee18b_0
   - aiosignal=1.2.0=pyhd3eb1b0_0
   - arrow-cpp=17.0.0=h865e1df_1
+  - async-timeout=4.0.3=pyhd8ed1ab_0
   - attrs=24.3.0=py312h06a4308_0
   - aws-c-auth=0.6.19=h5eee18b_0
   - aws-c-cal=0.5.20=hdbd6064_0
@@ -34,7 +35,7 @@ dependencies:
   - brotli-python=1.0.9=py312h6a678d5_9
   - bzip2=1.0.8=h5eee18b_6
   - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2024.12.31=h06a4308_0
+  - ca-certificates=2025.2.25=h06a4308_0
   - certifi=2025.1.31=py312h06a4308_0
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
   - click=8.1.8=pyh707e725_0
@@ -53,6 +54,8 @@ dependencies:
   - jmespath=1.0.1=py312h06a4308_0
   - joblib=1.4.2=py312h06a4308_0
   - krb5=1.20.1=h143b758_1
+  - langchain=0.3.22=pymin312_hff2d567_0
+  - langchain-core=0.3.50=pyhd8ed1ab_0
   - ld_impl_linux-64=2.40=h12ee557_0
   - libabseil=20240116.2=cxx17_h6a678d5_0
   - libboost=1.82.0=h109eef0_2
@@ -88,18 +91,20 @@ dependencies:
   - mkl-service=2.4.0=py312h5eee18b_2
   - mkl_fft=1.3.11=py312h5eee18b_0
   - mkl_random=1.2.8=py312h526ad5a_0
+  - mpmath=1.3.0=py312h06a4308_0
   - multidict=6.1.0=py312h5eee18b_0
   - multiprocess=0.70.15=py312h06a4308_0
   - ncurses=6.4=h6a678d5_0
   - numexpr=2.10.1=py312h3c60e43_0
   - numpy=1.26.4=py312hc5e2394_0
   - numpy-base=1.26.4=py312h0da6c21_0
-  - openssl=3.4.0=h7b32b05_1
+  - openssl=3.4.1=h7b32b05_0
   - orc=2.0.1=h2d29ad5_0
   - packaging=24.2=py312h06a4308_0
   - pandas=2.2.3=py312h6a678d5_0
   - pip=24.2=py312h06a4308_0
   - propcache=0.2.0=py312h5eee18b_0
+  - protobuf=4.25.3=py312he36ed58_1
   - pyarrow=17.0.0=py312h526ad5a_0
   - pycryptodomex=3.21.0=py312h5eee18b_0
   - pysocks=1.7.1=py312h06a4308_0
@@ -122,6 +127,7 @@ dependencies:
   - six=1.16.0=pyhd3eb1b0_1
   - snappy=1.2.1=h6a678d5_0
   - sqlite=3.45.3=h5eee18b_0
+  - sympy=1.13.3=py312h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.14=h39e8969_0
   - tokenizers=0.20.0=py312h5ee3a2d_0
@@ -144,6 +150,7 @@ dependencies:
       - annotated-types==0.7.0
       - anyio==4.9.0
       - beautifulsoup4==4.12.3
+      - cachetools==5.5.2
       - dataclasses-json==0.6.7
       - distro==1.9.0
       - duckduckgo-search==7.2.1
@@ -151,11 +158,22 @@ dependencies:
       - e2b-code-interpreter==1.0.3
       - fastapi==0.115.6
       - ffmpy==0.5.0
+      - google==3.0.0
+      - google-api-core==2.24.2
+      - google-api-python-client==2.165.0
+      - google-auth==2.38.0
+      - google-auth-httplib2==0.2.0
+      - google-cloud==0.34.0
+      - google-cloud-vision==3.10.1
+      - googleapis-common-protos==1.69.2
       - gradio==5.11.0
       - gradio-client==1.5.3
       - greenlet==3.1.1
+      - grpcio==1.71.0
+      - grpcio-status==1.71.0
       - h11==0.14.0
       - httpcore==1.0.7
+      - httplib2==0.22.0
       - httpx==0.27.2
       - httpx-sse==0.4.0
       - huggingface-hub==0.27.1
@@ -166,9 +184,8 @@ dependencies:
       - jsonpointer==3.0.0
       - jsonschema==4.23.0
       - jsonschema-specifications==2024.10.1
-      - langchain==0.3.21
       - langchain-community==0.3.14
-      - langchain-core==0.3.45
+      - langchain-huggingface==0.1.2
       - langchain-text-splitters==0.3.7
       - langsmith==0.2.11
       - litellm==1.57.4
@@ -194,7 +211,10 @@ dependencies:
       - pillow==11.1.0
       - platformdirs==4.3.6
       - primp==0.14.0
+      - proto-plus==1.26.1
       - psutil==7.0.0
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.1
       - pydantic==2.10.6
       - pydantic-core==2.27.2
       - pydantic-settings==2.7.1
@@ -204,6 +224,7 @@ dependencies:
       - referencing==0.35.1
       - requests-toolbelt==1.0.0
       - rich==13.9.4
+      - rsa==4.9
       - safehttpx==0.1.6
       - scikit-learn==1.6.0
       - sentence-transformers==3.3.1
@@ -222,5 +243,6 @@ dependencies:
       - triton==3.1.0
       - typer==0.15.1
       - typing-inspect==0.9.0
+      - uritemplate==4.1.1
       - uvicorn==0.34.0
 prefix: /home/groups/ruthm/chatbot/miniconda3/envs/chatbot
